[package]
name = "amm-anchor"
version = "0.2.2"
description = "Anchor bindings for the AMM native instruction."
homepage = "https://raydium.io/"
repository = "https://github.com/raydium-io/raydium-contract-instructions"
edition = "2021"
keywords = ["solana", "raydium", "amm", "anchor"]

[dependencies]
anchor-lang = "=0.29.0"
solana-program = "=1.17.31"
spl-token = { version="=4.0.0", features = [ "no-entrypoint" ] }
spl-memo = "=4.0.0"
raydium-contract-instructions = { registry = "kellnr", version = "0.2.2"}
